--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shangi-La Resort</title>
+    <title>Shangri-La Resort</title>
 </head>
 <body>
     <header>
-        <h1>Shangi-La Beach Resort</h1>
-        <p id="subtitle">Your Dream Getaway</p>
+        <img src="./logo_branding/logo_beige.svg" alt="Shangri-La Logo">
+        <nav>
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./pages_html/rooms.html">Accomodations</a></li>
+                <li><a href="./pages_html/activities.html">Activities & Excursions</a></li>
+                <li><a href="./pages_html/spa.html">Serenity Sanctuary Spa</a></li>
+                <li><a href="./pages_html/dining.html">Dining</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         
     </main>
+    <footer>
+        <p>&copy2025. Shangri La Beach Resort. All rights reserved.</p>
+    </footer>
 </body>
 </html>
