Add styling to header and hero
Add styling to header and hero

--- a/index.html
+++ b/index.html
@@ -5,24 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shangri-La Resort</title>
     <link rel="icon" type="image/png" href="./favicon.png">
+    <link rel="stylesheet" href="main.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+    </style>
 </head>
 <body>
     <header>
-        <img src="./logo_branding/logo_icon_beige.svg" alt="Shangri-La Logo Icon, sand beige color.">
+        <img src="./logo_branding/logo_blue.svg" alt="Shangri-La Logo, sand beige color.">
         <nav>
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./pages_html/rooms.html">Accomodations</a></li>
-                <li><a href="./pages_html/activities.html">Activities & Excursions</a></li>
-                <li><a href="./pages_html/spa.html">Serenity Sanctuary Spa</a></li>
-                <li><a href="./pages_html/dining.html">Dining</a></li>
+                <a href="./index.html"><li>Home</li></a>
+                <a href="./pages_html/rooms.html"><li>Accomodations</li></a>
+                <a href="./pages_html/activities.html"><li>Activities & Excursions</li></a>
+                <a href="./pages_html/spa.html"><li>Serenity Sanctuary Spa</li></a>
+                <a href="./pages_html/dining.html"><li>Dining</li></a>
             </ul>
         </nav>
     </header>
     <main>
 
         <div id="hero">
-            <img src="./logo_branding/logo_beige.svg" alt="Shangri-La Logo, sand beige color.">
+            <img src="./logo_branding/logo_icon_lightblue.svg" alt="Shangri-La Logo Icon, sand beige color.">
             <h1>Your Dream Getaway</h1>
         </div>
 
@@ -116,10 +120,10 @@
         <img src="./logo_branding/logo_beige.svg" alt="Shangri-La Logo">
         <p>&copy2025. Shangri La Beach Resort. All rights reserved.</p>
         <div id="social-media-icons">
-            <img src="./media_photos/Icons/facebook-icon.png">
-            <img src="./media_photos/Icons/instagram-icon.png">
-            <img src="./media_photos/Icons/x-icon.png">
-            <img src="./media_photos/Icons/tiktok-icon.png">
+            <img src="./media_photos/Icons/facebook-icon.png" alt="Facebook icon, sand beige color.">
+            <img src="./media_photos/Icons/instagram-icon.png" alt="Instagram icon, sand beige color.">
+            <img src="./media_photos/Icons/x-icon.png" alt="X icon, sand beige color.">
+            <img src="./media_photos/Icons/tiktok-icon.png" alt="TikTok icon, sand beige color.">
         </div>
     </footer>
 </body>
