Add styling to index.css
Add styling to index.html <main> content through index.css.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shangri-La Resort</title>
     <link rel="icon" type="image/png" href="./branding/favicon.png">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/index.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
     </style>
@@ -30,11 +31,14 @@
             <h1>Your Dream Getaway</h1>
         </div>
 
-        <div id="wavey-background">
-            <h2>Escape to Paradise</h2>
-            <p>Indulge in luxury and breathtaking views at Shangri La Beach Resort.</p>
-            <a href="./pages_html/rooms.html"><button>Browse Our Accommodations</button></a>
-        </div>
+        <h2>Escape to Paradise</h2>
+        <figure id="escape-paradise">
+            <img src="./media/media_photos/index/garden-beach.jpg">
+            <figcaption>
+                <p>Indulge in luxury and breathtaking views at Shangri La Beach Resort.</p>
+                <a href="./pages_html/rooms.html"><button>Browse Our Accommodations</button></a>
+            </figcaption>
+        </figure>
 
         <h2>Experience Unforgettable Moments</h2>
         <div id="info-grid">
