Update alt text on social media icons
Update alt text on social media icons in the footer.

--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
     <footer>
         <img class="footer-logo" src="./branding/logo/logo_white.png" alt="Shangri-La Logo">
         <div class="social-media-icons">
-            <img src="./media/icons/social-media/facebook-icon-white.png" alt="Facebook icon, sand beige color.">
-            <img src="./media/icons/social-media/instagram-icon-white.png" alt="Instagram icon, sand beige color.">
-            <img src="./media/icons/social-media/x-icon-white.png" alt="X icon, sand beige color.">
-            <img src="./media/icons/social-media/tiktok-icon-white.png" alt="TikTok icon, sand beige color.">
+            <img src="./media/icons/social-media/facebook-icon-white.png" alt="Facebook icon, white.">
+            <img src="./media/icons/social-media/instagram-icon-white.png" alt="Instagram icon, white.">
+            <img src="./media/icons/social-media/x-icon-white.png" alt="X icon, white.">
+            <img src="./media/icons/social-media/tiktok-icon-white.png" alt="TikTok icon, white.">
         </div>
         <p>&copy2025. Shangri La Beach Resort. All rights reserved.</p>
     </footer>
