--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <a href="./rooms.html"><button>More Details [link to area on page]</button></a>
                 </figcaption>
             </figure>
-            <a href="./rooms.html" id="browse-all"><button>Browse All Accomodations</button></a>
+            <a href="./rooms.html" class="floating-button"><button>Browse All Accomodations</button></a>
         </div>
 
         <h2>What Our Guests Are Saying</h2>
@@ -117,8 +117,8 @@
                 <h3>John B.</h3>
                 <p>"The beachfront suite was amazing! Waking up to the sound of the waves and stepping right onto the sand was incredible."</p>
             </div>
+            <a href="./pages_html/rooms.html" class="floating-button"><button>Read More Reviews</button></a>
         </div>
-        <a href="./pages_html/rooms.html"><button>Read More Reviews</button></a>
 
     </main>
     <footer>
