--- a/about.html
+++ b/about.html
@@ -39,6 +39,11 @@
     </main>
     <footer>
         <img class="footer-logo" src="./branding/logo/logo_white.png" alt="Shangri-La Logo">
+        <ul>
+            <li><a href="./testimonials.html">Reviews</a></li>
+            <li><a href="./about.html">About Us</a></li>
+            <li><a href="./rooms.html">Book With Us</a></li>
+        </ul>
         <div class="social-media-icons">
             <img src="./media/icons/social-media/facebook-icon-white.png" alt="Facebook icon, white.">
             <img src="./media/icons/social-media/instagram-icon-white.png" alt="Instagram icon, white.">
