Add weather API (temperature)

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
                 <a href="./dining.html"><li>Dining</li></a>
             </ul>
         </nav>
+        <div id="weather-banner">
+            <h2>Villingili, Maldives</h2>
+            <img id="weather-icon" src="" alt="Weather icon.">
+            <p id="temperature"></p>
+            <p id="current-time"></p>
+        </div>
     </header>
     <main>
 
@@ -136,5 +142,8 @@
         </div>
         <p>&copy2025. Shangri La Beach Resort. All rights reserved.</p>
     </footer>
+
+    <script src="./main.js"></script>
+    
 </body>
 </html>
