Add dynamic icons to weather api
Add icons that change according to the weather data.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 </head>
 <body>
     <header>
+        <div id="weather-banner">
+            <p id="location">Villingili, Maldives</p>
+            <img id="weather-icon" src="" alt="Weather icon.">
+            <p id="temperature"></p>
+        </div>
         <img src="./branding/logo/logo_white.png" alt="Shangri-La Logo, white variation.">
         <nav>
             <ul>
@@ -23,12 +28,6 @@
                 <a href="./dining.html"><li>Dining</li></a>
             </ul>
         </nav>
-        <div id="weather-banner">
-            <h2>Villingili, Maldives</h2>
-            <img id="weather-icon" src="" alt="Weather icon.">
-            <p id="temperature"></p>
-            <p id="current-time"></p>
-        </div>
     </header>
     <main>
 
