Add weather icons to about page
Add weather icons to about page  as a gallery, considering that not all of them can be visible at the same time in the weather banner.

--- a/about.html
+++ b/about.html
@@ -29,12 +29,34 @@
             <img src="./branding/logo-icon/logo_icon_white.png" alt="Shangri-La Logo Icon, white variation.">
             <h1>About Us</h1>
         </div>
-        <h2>Our Branding</h2>
-        <div class="guidelines">
-            <img src="../branding/guidelines/brand_colors.png" alt="Color palette">
-            <img src="../branding/guidelines/brand_dos.png" alt="Do's">
-            <img src="../branding/guidelines/brand_donts.png" alt="Don'ts">
-            <img src="../branding/guidelines/brand_typography.png" alt="Typography">
+        <div id="guidelines">
+            <h2>Our Branding</h2>
+            <img src="./branding/guidelines/brand_colors.png" alt="Color palette">
+            <img src="./branding/guidelines/brand_dos.png" alt="Do's">
+            <img src="./branding/guidelines/brand_donts.png" alt="Don'ts">
+            <img src="./branding/guidelines/brand_typography.png" alt="Typography">
+        </div>
+        <div id="weather-icons">
+            <h2>Weather Icons</h2>
+            <p>The weather icons used on our site can be found here.</p>
+            <img src="./media/icons/weather/weather-day-sun.png" alt="Clear (day) icon">
+            <img src="./media/icons/weather/weather-day-sun-windy.png" alt="Windy (day) icon">
+            <img src="./media/icons/weather/weather-day-sun-cloudy.png" alt="Mostly clear (day) icon">
+            <img src="./media/icons/weather/weather-day-cloudy.png" alt="Cloudy icon">
+            <img src="./media/icons/weather/weather-day-light-rain.png" alt="Light rain (day) icon">
+            <img src="./media/icons/weather/weather-day-heavy-rain.png" alt="Heavy rain (day) icon">
+            <img src="./media/icons/weather/weather-day-light-snow.png" alt="Light snow (day) icon">
+            <img src="./media/icons/weather/weather-day-heavy-snow.png" alt="Hevay snow (day) icon">
+            <img src="./media/icons/weather/weather-day-thunder.png" alt="Thunderstorms (day) icon">
+            <img src="./media/icons/weather/weather-night-moon.png" alt="Clear (night) icon">
+            <img src="./media/icons/weather/weather-night-moon-windy.png" alt="Windy (night) icon">
+            <img src="./media/icons/weather/weather-night-moon-cloudy.png" alt="Mostly clear (night) icon">
+            <img src="./media/icons/weather/weather-night-cloudy.png" alt="Cloudy (night) icon">
+            <img src="./media/icons/weather/weather-night-light-rain.png" alt="Light rain (night) icon">
+            <img src="./media/icons/weather/weather-night-heavy-rain.png" alt="Heavy rain (night) icon">
+            <img src="./media/icons/weather/weather-night-light-snow.png" alt="Light snow (night) icon">
+            <img src="./media/icons/weather/weather-night-heavy-snow.png" alt="Hevay snow (night) icon">
+            <img src="./media/icons/weather/weather-night-thunder.png" alt="Thunderstorms (night) icon">
         </div>
     </main>
     <footer>
