--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <img id="weather-icon" src="" alt="Weather icon.">
             <p id="temperature"></p>
         </div>
-        <img src="./branding/logo/logo_white.png" alt="Shangri-La Logo, white variation.">
         <nav>
+            <img src="./branding/logo/logo_white.png" alt="Shangri-La Logo, white variation.">
             <ul>
                 <a href="./index.html"><li>Home</li></a>
                 <a href="./rooms.html"><li>Accommodations</li></a>
-                <a href="./activities.html"><li>Activities & Excursions</li></a>
-                <a href="./spa.html"><li>Serenity Sanctuary Spa</li></a>
+                <a href="./activities.html"><li>Activities</li></a>
+                <a href="./spa.html"><li>Spa</li></a>
                 <a href="./dining.html"><li>Dining</li></a>
             </ul>
         </nav>
@@ -39,10 +39,14 @@
         </figure>
 
         <div id="escape-paradise">
-            <h2>Escape to Paradise</h2>
-            <p>Indulge in luxury and breathtaking views at Shangri La Beach Resort.</p>
-            <img src="./media/media_photos/index/garden-beach.jpg" alt="Resort with wood huts on stilts in the shallow tropical water.">
-            <a href="./rooms.html"><button>Find a Room</button></a>
+            <div id="ep-left">
+                <h2>Escape to Paradise</h2>
+                <p>Indulge in luxury and breathtaking views at Shangri La Beach Resort.</p>
+            </div>
+            <div id="ep-right">
+                <img src="./media/media_photos/index/garden-beach.jpg" alt="Resort with wood huts on stilts in the shallow tropical water.">
+                <a href="./rooms.html"><button>Find a Room</button></a>
+            </div>
         </div>
 
         <div id="info-grid">
@@ -127,12 +131,14 @@
 
     </main>
     <footer>
-        <img class="footer-logo" src="./branding/logo/logo_white.png" alt="Shangri-La Logo">
-        <ul>
-            <li><a href="./testimonials.html">Reviews</a></li>
-            <li><a href="./about.html">About Us</a></li>
-            <li><a href="./rooms.html">Book With Us</a></li>
-        </ul>
+        <div id="footer-logo-nav">
+            <img class="footer-logo" src="./branding/logo/logo_white.png" alt="Shangri-La Logo">
+            <ul>
+                <li><a href="./testimonials.html">Reviews</a></li>
+                <li><a href="./about.html">About Us</a></li>
+                <li><a href="./rooms.html">Book With Us</a></li>
+            </ul>
+        </div>
         <div class="social-media-icons">
             <img src="./media/icons/social-media/facebook-icon-white.png" alt="Facebook icon, white.">
             <img src="./media/icons/social-media/instagram-icon-white.png" alt="Instagram icon, white.">
