Add content and styling to rooms page
Add content and styling to rooms page.

Update links on other pages and main.css accordingly.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <figcaption>
                     <h3>Ocean View Deluxe Room</h3>
                     <p>Enjoy stunning ocean views from your private balcony.</p>
-                    <a href="./rooms.html"><button>More Details [link to area on page]</button></a>
+                    <a href="./rooms.html#oceanview"><button>More Details</button></a>
                 </figcaption>
             </figure>
             
@@ -100,7 +100,7 @@
                 <figcaption>
                     <h3>Beachfront Suite</h3>
                     <p>Step directly onto the sand from your spacious suite.</p>
-                    <a href="./rooms.html"><button>More Details [link to area on page]</button></a>
+                    <a href="./rooms.html#beachfront"><button>More Details</button></a>
                 </figcaption>
             </figure>
             
@@ -109,7 +109,7 @@
                 <figcaption>
                     <h3>Garden View Family Room</h3>
                     <p>Perfect for families, with ample space and garden views.</p>
-                    <a href="./rooms.html"><button>More Details [link to area on page]</button></a>
+                    <a href="./rooms.html#gardenview"><button>More Details</button></a>
                 </figcaption>
             </figure>
             <a href="./rooms.html" class="floating-button"><button>Browse All Accomodations</button></a>
