Add styling to activities page
Add styling to activities page.

Add images for activities page.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <h3>John B.</h3>
                 <p>"The beachfront suite was amazing! Waking up to the sound of the waves and stepping right onto the sand was incredible."</p>
             </div>
-            <a href="./pages_html/rooms.html" class="floating-button"><button>Read More Reviews</button></a>
+            <a href="./pages_html/rooms.html" class="floating-button"><button>Read More Reviews[CHANGE LINK]</button></a>
         </div>
 
     </main>
