Add styling to dining page
Add styling to dining page, such as the intro layout and the restaurant grid layout.

--- a/dining.html
+++ b/dining.html
@@ -48,6 +48,14 @@
                 <a href="#lobby-lounge"><li>The Lobby Lounge</li></a>
                 <a href="#other-options"><li>Other Dining Options</li></a>
             </ul>
+            <h2>Not Sure Where to Dine?</h2>
+            <p>Look out for these tag categories to help you decide!</p>
+            <div id="tags-list">
+                <p id="cuisine-tag-filter">Cuisine</p>
+                <p id="ambiance-tag-filter">Ambiance</p>
+                <p class="dresscode-tags">Dress Code</p>
+                <p class="reso-tags">Rservation Requirements</p>
+            </div>
         </div>
 
         <div id="dining-container">
