Add images and styling to dining page
Add styling to dining page.

--- a/dining.html
+++ b/dining.html
@@ -58,9 +58,9 @@
             </div>
         </div>
 
-        <div id="dining-container">
+        <div class="dining-container">
             <figure class="restaurant" id="beach-house">
-                <img src="./media/media_photos/testimonials/sarah-m.jpg" alt="Sarah smiling for the camera!">
+                <img src="./media/media_photos/dining/beach-house.jpg" alt="Dining area on patio overlooking the ocean at sunset.">
                 <figcaption>
                     <h3>The Beach House</h3>
                     <h4>Fine Dining with Ocean Views</h4>
@@ -85,7 +85,7 @@
             </figure>
 
             <figure class="restaurant" id="sand-bar">
-                <img src="./media/media_photos/testimonials/sarah-m.jpg" alt="Sarah smiling for the camera!">
+                <img src="./media/media_photos/dining/sand-bar.jpg" alt="Seating areas on the beach for casual dining.">
                 <figcaption>
                     <h3>The Sand Bar</h3>
                     <h4>Relaxed Beachfront Grill</h4>
@@ -111,7 +111,7 @@
             </figure>
  
             <figure class="restaurant" id="poolside-cafe">
-                <img src="./media/media_photos/testimonials/sarah-m.jpg" alt="Sarah smiling for the camera!">
+                <img src="./media/media_photos/dining/poolside.jpg" alt="Two drinks on the edge of a pool.">
                 <figcaption>
                     <h3>The Poolside Cafe</h3>
                     <h4>Refreshments and Light Bites</h4>
@@ -137,7 +137,7 @@
             </figure>
 
             <figure class="restaurant" id="lobby-lounge">
-                <img src="./media/media_photos/testimonials/sarah-m.jpg" alt="Sarah smiling for the camera!">
+                <img src="./media/media_photos/dining/lounge.jpg" alt="An indoor tropical themed bar.">
                 <figcaption>
                     <h3>The Lobby Lounge</h3>
                     <h4>Sophisticated Cocktails and Ambiance</h4>
@@ -160,29 +160,31 @@
                 </figcaption>
             </figure>
             
-            <h3 id="other-options">Other Dining Options</h3>
-            <figure class="other-options">
-                <img src="./media/media_photos/testimonials/sarah-m.jpg" alt="Sarah smiling for the camera!">
+            
+        </div>
+        <div class="dining-container" id="other-options-container">
+            <h2 id="other-options">Other Dining Options</h2>
+            <figure class="restaurant">
+                <img src="./media/media_photos/dining/room-service.jpg" alt="A tray of food and drinks on a bed.">
                 <figcaption>
-                    <h4>Room Service</h4>
+                    <h3>Room Service</h3>
                     <p>Enjoy the convenience of dining in the comfort and privacy of your own room with our extensive room service menu, available 24 hours a day.</p>
                 </figcaption>
             </figure>
-            <figure class="other-options">
-                <img src="./media/media_photos/testimonials/sarah-m.jpg" alt="Sarah smiling for the camera!">
+            <figure class="restaurant">
+                <img src="./media/media_photos/dining/buffet.jpg" alt="A breakfast buffet.">
                 <figcaption>
-                    <h4>Buffet Breakfast</h4>
+                    <h3>Buffet Breakfast</h3>
                     <p>Start your day with a sumptuous buffet breakfast featuring a wide array of hot and cold dishes, fresh fruits, pastries, and more.</p>
                 </figcaption>
             </figure>
-            <figure class="other-options">
-                <img src="./media/media_photos/testimonials/sarah-m.jpg" alt="Sarah smiling for the camera!">
+            <figure class="restaurant">
+                <img src="./media/media_photos/dining/chef.jpg" alt="A chef laying food onto a plate.">
                 <figcaption>
-                    <h4>Special Dietary Options</h4>
+                    <h3>Special Dietary Options</h3>
                     <p>We are committed to accommodating your dietary needs. Please inform us of any allergies or dietary restrictions, and our chefs will be happy to prepare customized meals for you.</p>
                 </figcaption>
             </figure>
-
         </div>
 
     </main>
