Update weather banner location
Update weather banner location to Cancun, Mexico.

Update hero banner on about page.

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div id="weather-banner">
-            <p id="location">Villingili, Maldives</p>
+            <p id="location">Cancún, Mexico</p>
             <img id="weather-icon" src="" alt="Weather icon.">
             <p id="temperature"></p>
         </div>
