--- a/spa.html
+++ b/spa.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div id="weather-banner">
-            <p id="location">Villingili, Maldives</p>
+            <p id="location">Cancún, Mexico</p>
             <img id="weather-icon" src="" alt="Weather icon.">
             <p id="temperature"></p>
         </div>
