Update hero heading to "about us"

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         <figure class="hero">
             <img src="./branding/logo-icon/logo_icon_white.png" alt="Shangri-La Logo Icon, white variation.">
             <figcaption>
-                <h1>Your Dream Getaway</h1>
+                <h1>About Us</h1>
             </figcaption>
         </figure>
         <div id="guidelines">
